--- a/components/_card.scss
+++ b/components/_card.scss
@@ -8,12 +8,20 @@
     width: 16rem;
     border-radius: 8px;
 
-    &>img {
-        max-width: 16rem;
+    &-img-wrapper {
+        display: inline-block;
+        overflow: hidden;
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
-        &:hover {
-            transform: scale(1.5);
+        &>img {
+            max-width: 16rem;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            transition: transform 0.2s;
+            &:hover {
+                transform: scale(1.2);
+                cursor: pointer;
+            }
         }
     }
 
