--- a/style.scss
+++ b/style.scss
@@ -6,4 +6,5 @@ $breakpoint-sm: $breakpoint-md/2;
 
 @import "reset";
 @import "utilities/container";
+@import "components/nav";
 @import "components/card";
