--- a/style.css
+++ b/style.css
@@ -81,6 +81,42 @@ select {
   padding-right: 1rem;
 }
 
+.nav {
+  width: 100%;
+  display: flex;
+}
+.nav > img {
+  max-width: 8rem;
+}
+.nav-inner {
+  width: 100%;
+  display: flex;
+  vertical-align: middle;
+}
+.nav-inner > ul {
+  list-style: none;
+}
+.nav-inner-ul {
+  width: 50%;
+  justify-content: center;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+.nav-inner-ul > li > a {
+  text-decoration: none;
+  color: black;
+}
+.nav-inner-ul > li:hover {
+  text-decoration: underline;
+}
+.nav-inner-lang {
+  display: flex;
+}
+.nav-inner-lang > li:hover {
+  text-decoration: underline;
+}
+
 .card-group {
   display: flex;
   justify-content: space-between;
